--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -1,73 +1,42 @@
 # Introduction to Statistical Inference {#inference}
 
-## Overview
-Recall from Chapter 1, one of the data analysis questions we often want to answer is an *inferential question* where we make conclusions about a population of interest based on observed data sampled from that population. Statistical inference can help us decide if differences we observe between the responses of two groups in say a clinical trial give us evidence that these differences exist in the wider population.
 
-We will start with fundamental ideas of sampling, populations, samples, parameters and statistics and work our way to discussing sampling distributions, bootstrapping, estimation and confidence intervals. In this chapter we will introduce two forms of statistical inference: 
+## Overview
+Recall from Chapter 1, one of the data analysis questions we often want to answer is an *inferential question* where we make conclusions about some unknown aspect of a population of interest based on observed data sampled from that population. Statistical inference can help us decide if differences we observe between groups' responses exist in the broader population. 
+
+This chapter will start with fundamental ideas of sampling and will work our way to introduce two forms of statistical inference: 
 
 * Point Estimation 
 * Interval Estimation
 
-Point estimation and interval estimate are two methods of drawing conclusions about the population using our sample, however there are other inference methods which we will not discuss in this chapter. The term "statistical inference" encompasses a wide range of methods and there are many complexities for performing inference, however, this chapter will provide you with a broad introduction to sampling and statistical inference. 
+Point estimation and interval estimate are two methods of making conclusions about the population using our sample. The term "statistical inference" encompasses a wide range of techniques, and there are many complexities for performing inference. There are other inference methods that we will not discuss in this chapter. However, this chapter will provide you with a broad introduction to sampling and statistical inference. 
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* Describe real world examples of questions that can be answered with the statistical inference methods.
-* Name common population parameters (e.g., mean, proportion, median, variance, standard deviation) that are often estimated using sample data, and use computation to estimate these.
+* Describe real-world examples of questions that can be answered with the statistical inference methods.
+* Name common population parameters (e.g. mean, proportion, standard deviation) that are often estimated using sample data, and use computation to estimate these.
 * Define the following statistical sampling terms (population, sample, population parameter, point estimate, sampling distribution).
 * Explain the difference between a population parameter and sample point estimate.
-* Use computation to draw random samples from a finite population.
-* Use computation to create a sampling distribution from a finite population.
+* Use R to draw random samples from a finite population.
+* Use R to create a sampling distribution from a finite population.
 * Describe how sample size influences the sampling distribution.
 
 ## Why do we need sampling? 
-Statistical inference is a data analysis question where we want to look for patterns, trends, or relationships in a data set and decide how applicable these findings are to the wider population.	For example, we might use statistical inference to help us answer the questions:
+Statistical inference is a data analysis question where we want to look for patterns, trends, or relationships in a dataset and decide how applicable these findings are to the wider population. For example, we might use statistical inference to help us answer questions. For instance, a market researcher may be interested in knowing (1) What proportion of all undergraduate students in North America have an iPhone? Or a real estate analyst may want to know (2) What is the average price of all one-bedroom apartments in Vancouver, Canada?
 
-* What is the average price of all one bedroom apartments in Vancouver, Canada?
-or
-* What proportion of all University of British Columbia undergraduate students have an iPhone?
+In the above questions, we are interested in making conclusions about all one-bedroom apartments in Vancouver, Canada, and all undergraduate students in North America, which represent our populations of interest. A **population** is the complete collection of individuals or cases we are interested in studying. The proportion of the undergraduate students in North America with an iPhone is a **population parameter**. A population parameter is a numerical characteristic of the population. If we asked every single undergraduate in North America whether they own an iPhone or not and calculated the proportion of students that did -- that number would be our population parameter. Collecting information about the population means we would be conducting a *census*, which would provide all of the characteristics of the population. However, in practice, a census is often time-consuming, costly and sometimes impossible. Imagine trying to ask every undergraduate student in North America if they have an iPhone! Therefore a more practical approach would be to take a **sample**, a subset of individuals collected from the population. We may choose a sample from our population and use the observed data to infer the proportion of undergraduate students in North America who have an iPhone. A **sample statistic** is a numerical characteristic of the sample. For example, if we randomly selected 10 undergraduate students in North America and found the proportion of those 10 students who had an iPhone -- that number would be our sample statistic. 
 
-In these questions we are interested in making conclusions about all one bedroom apartments in Vancouver, Canada and all University of British Columbia undergraduate students respectively, which represent our populations of interest. A **population** is the complete collection of individuals, or cases we are interested in studying. A census would provide all of the characteristics about the population. However, in practice, a census is often time consuming, costly and sometimes impossible. Therefore we can take a **sample**, a subset of individuals, or cases collected from the population. A sample can provide useful information about the population if the sample is *unbiased*. A sample is said to be biased if the sample is systematically different from the population in some way. 
-A parameter is a numerical characteristic of the population and a statistic is a numerical characteristic of the sample. In the first question, the population parameter that we infer about is the population mean, the average price of all one bedroom apartments in Vancouver, Canada. The proportion of University of British Columbia undergraduate students have an iPhone, is another population parameter, specifically the population proportion. These questions are examples of *point estimation*, where we estimate our population parameter using a single value. We may choose a sample from our populations and use the observed data to make an inference about the proportion of all University of British Columbia undergraduate students that have an iPhone.
+In the first question, the population parameter that we infer about is the population proportion, the proportion of the undergraduate students in North America with an iPhone.The average price of all one-bedroom apartments in Vancouver, Canada is another population parameter, specifically the population mean. When the variable of interest is categorical, the population parameter that we will infer about is the population proportion. When the variable of interest in quantitative the population parameter that we infer about is the population mean. 
+These questions are examples of *point estimation*, where we estimate our population parameter using a single value. 
 
 
-dataset of documents into groups that correspond to topics, a dataset of human
-genetic information into groups that correspond to ancestral subpopulations, or
-a dataset of online customers into groups that correspond to purchasing
-behaviours.  Once the data are separated we can, for example, use the subgroups
-to generate new questions about the data and follow up with a predictive
-modelling exercise. In this course, clustering will be used only for exploratory
-analysis, i.e., uncovering patterns in the data that we have.
-
-Note that clustering is a fundamentally different kind of task than
-classification or regression. Most notably, both classification and regression
-are *supervised tasks* where there is a *predictive target* (a class label or
-value), and we have examples of past data with labels/values that help us
-predict those of future data. By contrast, clustering is an *unsupervised
-task*, as we are trying to understand and examine the structure of data without
-any labels to help us. This approach has both advantages and disadvantages.
-Clustering requires no additional annotation or input on the data; for example,
-it would be nearly impossible to annotate all the articles on Wikipedia with
-human-made topic labels, but we can still cluster the articles without this
-information to automatically find groupings corresponding to topics. 
-
-However, because there is no predictive target, it is not as easy to evaluate
-the "quality" of a clustering.  With classification, we are able to use a test
-data set to assess prediction performance. In clustering, there is not a single
-good choice for evaluation. In this book, we will use visualization to ascertain
-the quality of a clustering, and leave rigorous evaluation for more advanced
-courses.  
-
-> There are also so-called *semisupervised* tasks, where only some of the data
-> come with labels / annotations, but the vast majority don't. The goal
-> is to try to uncover underlying structure in the data that allows one to
-> guess the missing labels. This sort of task is very useful, for example, when one 
-> has an unlabelled data set that is too large to manually label, but one is willing to
-> provide a few informative example labels as a "seed" to guess the labels for all the data.
-
+INSERT PICTURE 
 
 **An illustrative example** 
+
+timbits -- calculate proportion -- this proportion is our sample proportion estimate of the population proportion  
+
 
 Suppose we have customer data with two variables measuring
 customer loyalty and satisfaction, and we want to learn whether there are distinct "types"
