--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -21,7 +21,7 @@ By the end of the chapter, students will be able to:
 * Describe how sample size influences the sampling distribution.
 
 ## Why do we need sampling? 
-Statistical inference can help us decide if differences we observe between groups' responses exist in the broader population. We might use statistical inference to help us answer questions, for instance
+Statistical inference can help us decide if differences we observe between groups' responses exist in the broader population. We might use statistical inference to help us answer questions, such as
 
 (1) A market researcher may be interested in knowing: what proportion of all undergraduate students in North America own an iPhone? 
 
@@ -29,20 +29,26 @@ Statistical inference can help us decide if differences we observe between group
 
 In the above questions, we are interested in making conclusions about all undergraduate students in North America and all one-bedroom apartments in Vancouver, Canada, which represent our populations of interest. A **population** is the complete collection of individuals or cases we are interested in studying. The proportion of the undergraduate students in North America with an iPhone is a **population parameter**. A population parameter is a numerical characteristic of the population. If we asked every single undergraduate in North America whether they own an iPhone or not and calculated the proportion of students that did -- that number would be our population parameter. Collecting information about the population means we would be conducting a *census*, which would provide all of the characteristics of the population. However, in practice, a census is often time-consuming, costly and sometimes impossible. Imagine trying to ask every undergraduate student in North America if they have an iPhone! Therefore a more practical approach would be to take a **sample**, a subset of individuals collected from the population. We may choose a sample from our population and use the observed data to infer the proportion of undergraduate students in North America who have an iPhone. A **sample statistic** is a numerical characteristic of the sample. For example, if we randomly selected 10 undergraduate students in North America and found the proportion of those 10 students who had an iPhone -- that number would be our sample statistic. 
 
-![Population versus sample](img/population_vs_sample.svg){width=200%, height=50%}
-In the first question, the population parameter that we infer about is the population proportion, the proportion of all undergraduate students in North America with an iPhone.The average price of all one-bedroom apartments in Vancouver, Canada is another population parameter, specifically the population mean. When the variable of interest is categorical, the population parameter that we will infer about is the population proportion. When the variable of interest in quantitative the population parameter that we infer about is the population mean. These questions are examples of *point estimation*, where we estimate our population parameter using a single value. 
+<center>
+![Population versus sample](img/population_vs_sample.svg){}
+</center>
+
+
+In the first question, the population parameter that we infer about is the population proportion, the proportion of all undergraduate students in North America with an iPhone. The average price of all one-bedroom apartments in Vancouver, Canada is another population parameter, specifically the population mean. When the variable of interest is categorical, the population parameter that we will infer about is the population proportion. When the variable of interest is quantitative the population parameter that we infer about is the population mean. These questions are examples of *point estimation*, where we estimate our population parameter using a single value. 
 
 ## Sampling distributions for proportions
 
 Let's start with an illustrative (and tasty!) example. Timbits are small, bite-sized doughnuts sold at a popular Canadian-based fast food restaurant chain founded in Hamilton, Ontario Canada.
 
 ![Timbits. Source: wikimedia.org](https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Timbits2.jpg/1600px-Timbits2.jpg){width=50%}
+
 Suppose we want to estimate the true proportion of chocolate doughnuts at Tim Hortons restaurants. In this example, we will make a simulated dataset of timbits. In reality, we rarely have measurements for our entire population. However, in this chapter we will pretend that we do so that we can learn about sampling and estimation. Let's simulate a box of 10,000 timbits. Below we are creating a `tibble()` with id, and the type of timbit, either old fashioned and chocolate as our columns.
 
 ```{r 10-example-proportions, echo = TRUE, message = FALSE, warning = FALSE}
 library(tidyverse) 
 library(ggplot2)
 library(infer)
+library(gridExtra)
 set.seed(1234)
 virtual_box <- tibble(timbit_id = seq(1, 10000, by = 1),
                      color = factor(rbinom(10000, 1, 0.63),
@@ -66,7 +72,7 @@ choc_sample_1 <- summarize(samples_1, n = sum(color == "chocolate"),
                                         prop = sum(color == "chocolate") / 40)
 choc_sample_1
 ```
-Here we see that the proportion of chocolate timbits in this random sample is 0.50. This value, 0.50, is our sample statistic and it serves as our estimate of the population proportion. Here we are using a single number from the sample data to estimate our population parameter. So we are doing what's known as **point estimation**.
+Here we see that the proportion of chocolate timbits in this random sample is `r round(choc_sample_1$prop,2)`. This value, `r round(choc_sample_1$prop,2)`, is our sample statistic and it serves as our estimate of the population proportion. Here we are using a single number from the sample data to estimate our population parameter. So we are doing what's known as **point estimation**.
 
 Imagine we took another random sample of 40 timbits from the population, do you think you would get the exact same proportion? Let's try sampling from the population again.
 ```{r 10-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
@@ -76,7 +82,7 @@ choc_sample_2 <- summarize(samples_2, n = sum(color == "chocolate"),
                                         prop = sum(color == "chocolate") / 40)
 choc_sample_2
 ```
-Notice that we get a different value for our statistic this time. The proportion of chocolate timbits in this sample is 0.675. If we were to do this again, another random sample could again give a different result. 
+Notice that we get a different value for our statistic this time. The proportion of chocolate timbits in this sample is `r round(choc_sample_2$prop, 2)`. If we were to do this again, another random sample could again give a different result. 
 
 This is what is known as **sampling variability**. Statistics vary from sample to sample due to sampling variability. But just how much should we expect the statistics of our random samples to vary? It will help us to understand the behaviour of our sample statistics to answer this, therefore we will simulate more from our population of timbits to observe this behaviour. 
 
@@ -97,498 +103,104 @@ sample_estimates <- samples %>%
 head(sample_estimates)
 tail(sample_estimates)
 ```
+
 ```{r 10-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE}
 sampling_distribution <-  ggplot(sample_estimates, aes(x = sample_proportion)) +
-    geom_histogram(binwidth = 0.05) +
+    geom_histogram(fill="#0072B2", color="#e9ecef",binwidth = 0.05) +
     xlab("Sample proportions") +
     ggtitle("Sampling distribution of the sample proportion") 
 sampling_distribution
 ```
+The sampling distribution appears to be bell-shaped with one peak. It is centered around `r round(mean(sample_estimates$sample_proportion),1)` and the sample proportions range from about `r round(min(sample_estimates$sample_proportion), 1)` to about `r round(max(sample_estimates$sample_proportion), 1)`. In fact, we could calculate the mean and standard deviation of the sample proportions. 
+
+```{r 10-example-proportions8, echo = TRUE, message = FALSE, warning = FALSE}
+sample_estimates %>% 
+  summarise(mean = mean(sample_proportion), sd = sd(sample_proportion))
+```
+We notice that the sample proportions are centered around the population proportion value and the standard deviation of the sample proportions is `r round(sd(sample_estimates$sample_proportion), 3)`.
 
 > **Note:** If random samples of size $n$ are taken from a population, $\hat{p}$ will be approximately Normal with mean $p$ and standard deviation $\sqrt{\frac{p(1-p)}{n}}$ as long as the sample size $n$ is large enough such that $np$ and $n(1 - p)$ are at least 10, where $p$ is the population proportion, $\hat{p}$ is the sample proportion and $n$ is the sample size. 
 
 
-##Sampling distributions for means 
-source: http://insideairbnb.com/
+## Sampling distributions for means 
+In the previous section our variable of interest, type of timbit, was categorical, and the population parameter that we inferred about was the population proportion. What if we want to infer something about a quantitative variable? For instance, suppose we were interested in estimating the average price of all Airbnb rentals in Vancouver, Canada. If the variable of interest is quantitative the population parameter that we infer about is the population mean. Airbnb is an online marketplace for arranging or offering lodging. The dataset contains Vancouver in September 2020 from the following source:
+http://insideairbnb.com/.
 
-
-```{r 10-example-means, echo = FALSE, message = FALSE, warning = FALSE}
+Let's imagine that we had the population data for all airbnb listings in Vancouver. Remember, in reality, we rarely have measurements for our entire population, however, for this example we will pretend that we do so that we can learn about sampling and estimation for sample means.
+```{r 10-example-means1, echo = FALSE, message = FALSE, warning = FALSE}
 airbnb <- read_csv("data/listings.csv") %>% 
   select(id, neighbourhood = neighbourhood_cleansed, room_type, accommodates, bathrooms = bathrooms_text, bedrooms, beds,  price) %>% 
-  mutate(price = as.numeric(str_remove(price, "[$]")))
-head(airbnb)
-```
-```{r 10-clustering}
-data <- tibble(loyalty = c(7, 7.5, 8, 7, 3, 1, 8, 4, 2, 7, 6, 7, 6, 5, 9, 7, 9, 5, 2),
-               csat = c(1, 1, 2, 2, 2, 3, 3, 4, 4, 6, 6, 7, 7, 7, 8, 8, 9, 9, 3),
-               cluster = c("1",
-                           "1",
-                           "1",
-                           "1",
-                           "3",
-                           "3",
-                           "1",
-                           "3",
-                           "3",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2", 
-                           "3"))
-marketing_data <- data[,1:2]
-head(marketing_data)
-
-```{r 10-toy-example-plot, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Modified from http://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation/"}
-base <- ggplot(data, aes(y = loyalty, x = csat)) +
-  geom_point() +
-  xlab("Customer satisfaction") +
-  ylab("Loyalty") +
-  xlim(c(0, 10)) +
-  ylim(c(0, 10))
-
-base
+  mutate(price = as.numeric(str_remove(price, "[$]"))) %>% 
+  na.omit()
 ```
 
-Based on this visualization, we might suspect there are a few subtypes of customer,
-selected from combinations of high/low satisfaction and high/low loyalty. How
-do we find this grouping automatically, and how do we pick the number of subtypes
-to look for? The
-way to rigorously separate the data into groups is to use a clustering algorithm.
-In this chapter, we will focus on the *K-means* algorithm, a widely-used
-and often very effective clustering method, combined with the *elbow method* for
-selecting the number of clusters. This procedure will separate the data into 
-the following groups denoted by colour:
-
-```{r 10-toy-example-clustering, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
-ggplot(data, aes(y = loyalty, x = csat, color = cluster)) +
-  geom_point() +
-  xlab("Customer satisfaction") +
-  ylab("Loyalty") +
-  xlim(c(0, 10)) +
-  ylim(c(0, 10))
-```
-
-What are the labels for these groups? Unfortunately, we don't have any. K-means,
-like almost all clustering algorithms, just outputs meaningless "cluster labels"
-that are typically whole numbers: 1, 2, 3, etc. But in a simple case like this,
-where we can easily visualize the clusters on a scatter plot, we can give
-human-made labels to the groups using their positions on
-the plot:
-
-- low loyalty and low satisfaction (<font color="#00BA38">green cluster</font>),
-- high loyalty and low satisfaction (<font color="#F8766D">pink cluster</font>), 
-- and high loyalty and high satisfaction (<font color="#619CFF">blue cluster</font>).
-
-Once we have made these determinations, we can use them to inform our future business decisions,
-or to ask further questions about our data. For example, here we might notice based on our clustering
-that there aren't any customers with high satisfaction but low loyalty, and generate new analyses
-or business strategies based on this information. 
-
-## K-means 
-
-### Measuring cluster quality
-
-```{r 10-toy-example-clus1, echo = FALSE, message = FALSE, warning = FALSE}
-library(tidyverse)
-clus1 <- tibble(loyalty = c(7, 7.5, 8, 7, 8),
-               csat = c(1, 1, 2, 2, 3),
-               )
-#clus1_center <- clus1 %>% summarize(csat = mean(csat), loyalty = mean(loyalty))
-```
-
-The K-means algorithm is a procedure that groups data into K clusters.
-It starts with an initial clustering of the data, and then iteratively
-improves it by making adjustments to the assignment of data
-to clusters until it cannot improve any further. But how do we measure
-the "quality" of a clustering, and what does it mean to improve it? 
-In K-means clustering, we measure the quality of a cluster by its
-*within-cluster sum-of-squared-distances* (WSSD). Computing this involves two steps.
-First, we find the cluster centers by computing the mean of each variable 
-over data points in the cluster. For example, suppose we have a 
-cluster containing 3 observations, and we are using two variables, $x$ and $y$, to cluster the data.
-Then we would compute the $x$ and $y$ variables, $\mu_x$ and $\mu_y$, of the cluster center via
-
-$$\mu_x = \frac{1}{3}(x_1+x_2+x_3) \quad \mu_y = \frac{1}{3}(y_1+y_2+y_3).$$
-
-In the first cluster from the customer satisfaction/loyalty example, there 
-are 5 data points. These are shown with their cluster center 
-(`csat = 1.8` and `loyalty = 7.5`) highlighted below.
-
-```{r 10-toy-example-clus1-center, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the toy example, with center highlighted."}
-base <- ggplot(clus1) +
-  geom_point(aes(y = loyalty, x = csat)) +
-  labs(x = "Customer satisfaction", y = "Loyalty") +
-  xlim(c(0, 4)) +
-  ylim(c(6, 9)) +
-  geom_point(aes(y = mean(loyalty), x = mean(csat), colour="red", size=2.5)) +
-  theme(legend.position = "none")
-base
-```
-
-The second step in computing the WSSD is to add up the squared distance between each point in the cluster and the cluster center.
-We use the straight-line / Euclidean distance formula that we learned about in the classification chapter.
-In the 3-observation cluster example above, we would compute the WSSD $S^2$ via
-
-$$S^2 = \left((x_1 - \mu_x)^2 + (y_1 - \mu_y)^2\right) + \left((x_2 - \mu_x)^2 + (y_2 - \mu_y)^2\right) +\left((x_3 - \mu_x)^2 + (y_3 - \mu_y)^2\right).$$
-
-These distances are denoted by lines for the first cluster of the customer satisfaction/loyalty data example below. 
-
-```{r 10-toy-example-clus1-dists, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the toy example, with distances to the center highlighted."}
-base <- ggplot(clus1) +
-  geom_point(aes(y = loyalty, x = csat)) +
-  labs(x = "Customer satisfaction", y = "Loyalty") +
-  xlim(c(0, 4)) +
-  ylim(c(6, 9)) +
-  theme(legend.position = "none")
-
-mn <- clus1 %>% summarize(csat = mean(csat), loyalty=mean(loyalty))
-for (i in 1:5) {
-  base <- base + geom_segment(x = unlist(mn[1, "csat"]), y = unlist(mn[1, "loyalty"]),
-                           xend = unlist(clus1[i, "csat"]), yend = unlist(clus1[i, "loyalty"]))
-}
-base <- base + geom_point(aes(y = mean(loyalty), x = mean(csat), colour="red", size=2.5)) 
-base
-```
-
-The larger the value of $S^2$, the more spread-out the cluster is, since large $S^2$ means that points are far away from the cluster center.
-Note, however, that "large" is relative to *both* the scale of the variables for clustering *and* the number of points in the cluster; a 
-cluster where points are very close to the center might still have a large $S^2$ if there are many data points in the cluster. 
-
-### The clustering algorithm
-
-The K-means algorithm is quite simple. We begin by picking K, and uniformly randomly assigning data to the K clusters. 
-Then K-means consists of two major steps that attempt to minimize the
-sum of WSSDs over all the clusters, i.e. the *total WSSD*:
-
-1. **Center update:** Compute the center of each cluster.
-2. **Label update:** Reassign each data point to the cluster with the nearest center.
-
-These two steps are repeated until the cluster assignments no longer change.
-For example, in the customer data example from earlier, our initialization might look like this:
-<center>
-```{r 10-toy-kmeans-init, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Random initialization of labels."}
-library(gridExtra)
-set.seed(2)
-marketing_data["label"] = factor(sample(1:3, nrow(marketing_data), replace=T))
-
-plt_lbl <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
-    geom_point(size=2) +
-    xlab("Customer satisfaction") +
-    ylab("Loyalty") +
-    xlim(c(0, 10)) +
-    ylim(c(0, 10)) + 
-    theme(legend.position = "none")
-print(plt_lbl)
-```
-</center>
-
-And the first three iterations of K-means would look like (each row corresponds to an iteration,
-where the left column depicts the center update, 
-and the right column depicts the reassignment of data to clusters): 
-<center>
-**Center Update**  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;**Label Update**
-```{r 10-toy-kmeans-iter, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 8}
-for (i in 1:3){
-    #compute centers
-    centers <- marketing_data %>% group_by(label) %>% summarize_all(funs(mean))
-    nclus = nrow(centers)
-    #replot with centers
-    plt_ctr <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
-        geom_point(size=2) +
-        xlab("Customer satisfaction") +
-        ylab("Loyalty") +
-        xlim(c(0, 10)) +
-        ylim(c(0, 10)) + 
-        theme(legend.position = "none") +
-        geom_point(data = centers, aes(y = loyalty, x = csat, fill = label), size=5, shape = 21, stroke = 2, colour = "black") 
-    
-    #reassign labels
-    dists <- rbind(centers, marketing_data) %>% 
-           select("csat", "loyalty") %>%
-           dist() %>%
-           as.matrix()
-    dists <- as_tibble(dists[-(1:nclus),1:nclus])
-    marketing_data <- marketing_data %>% mutate(label = apply(dists, 1, function(x) names(x)[which.min(x)]))
-    
-    plt_lbl <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
-        geom_point(size = 2) +
-        xlab("Customer satisfaction") +
-        ylab("Loyalty") +
-        xlim(c(0, 10)) +
-        ylim(c(0, 10)) + 
-        theme(legend.position = "none") +
-        geom_point(data = centers, aes(y = loyalty, x = csat, fill = label), size=5, shape = 21, stroke = 2, colour = "black") 
-    
-    #to generate the animated version, get rid of grid.arrange and use the below two lines
-    #set the figure width to 4.35 too
-    #print(plt_ctr)
-    #print(plt_lbl)
-    grid.arrange(plt_ctr, plt_lbl, nrow = 1)
-}
-```
-</center>
-
-Note that at this point we can terminate the algorithm, since none of the assignments changed
-in the third iteration; both the centers and labels will remain the same from this point onward.
-
-> Is K-means *guaranteed* to stop at some point, or could it iterate forever? As it turns out,
-> the answer is thankfully that K-means is guaranteed to stop after *some* number of iterations. For the interested reader, the
-> logic for this has three steps: (1) both the label update and the center update decrease total WSSD in each iteration,
-> (2) the total WSSD is always greater than or equal to 0, and (3) there are only a finite number of possible
-> ways to assign the data to clusters. So at some point, the total WSSD must stop decreasing, which means none of the assignments
-> are changing and the algorithm terminates.
-
-### Random restarts
-
-K-means, unlike the classification and regression models we studied in previous chapters, can get "stuck" in a bad solution.
-For example, if we were unlucky and initialized K-means with the following labels:
-<center>
-```{r 10-toy-kmeans-bad-init, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Random initialization of labels."}
-set.seed(7)
-marketing_data["label"] = factor(sample(1:3, nrow(marketing_data), replace=T))
-
-plt_lbl <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
-    geom_point(size = 2) +
-    xlab("Customer satisfaction") +
-    ylab("Loyalty") +
-    xlim(c(0, 10)) +
-    ylim(c(0, 10)) + 
-    theme(legend.position = "none")
-print(plt_lbl)
-```
-</center>
-
-Then the iterations of K-means would look like:
-<center>
-**Center Update**  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;**Label Update**
-```{r 10-toy-kmeans-bad-iter, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 8}
-for (i in 1:5){
-    #compute centers
-    centers <- marketing_data %>% group_by(label) %>% summarize_all(funs(mean))
-    nclus = nrow(centers)
-    #replot with centers
-    plt_ctr <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
-        geom_point(size = 2) +
-        xlab("Customer satisfaction") +
-        ylab("Loyalty") +
-        xlim(c(0, 10)) +
-        ylim(c(0, 10)) + 
-        theme(legend.position = "none") +
-        geom_point(data = centers, aes(y = loyalty, x = csat, fill = label), size=5, shape = 21, stroke = 2, colour = "black") 
-    
-    #reassign labels
-    dists <- rbind(centers, marketing_data) %>% 
-           select("csat", "loyalty") %>%
-           dist() %>%
-           as.matrix()
-    dists <- as_tibble(dists[-(1:nclus),1:nclus])
-    marketing_data <- marketing_data %>% mutate(label = apply(dists, 1, function(x) names(x)[which.min(x)]))
-    
-    plt_lbl <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
-        geom_point(size = 2) +
-        xlab("Customer satisfaction") +
-        ylab("Loyalty") +
-        xlim(c(0, 10)) +
-        ylim(c(0, 10)) + 
-        theme(legend.position = "none") +
-        geom_point(data = centers, aes(y = loyalty, x = csat, fill = label), size=5, shape = 21, stroke = 2, colour = "black") 
-    
-    #print(plt_ctr)
-    #print(plt_lbl)
-    grid.arrange(plt_ctr, plt_lbl, nrow = 1)
-}
-```
-</center>
-
-This looks like a relatively bad clustering of the data, but K-means cannot improve it.
-To solve this problem when clustering data using K-means, we should randomly re-initialize the labels a few times, run K-means for each initialization,
-and pick the clustering that has the lowest final total WSSD.
-
-### Choosing K
-
-In order to cluster data using K-means, we also have to pick the number of clusters, K.
-But unlike in classification, we have no data labels and cannot perform
-cross-validation with some measure of model prediction error.
-Further, if K is chosen too small, then multiple clusters get grouped together;
-if K is too large, then clusters get subdivided. In both cases, we will potentially miss
-interesting structure in the data. For example, take a look below at the K-means
-clustering of our customer satisfaction and loyalty data for a number of clusters
-ranging from 1 to 9.
-
-```{r 10-toy-kmeans-vary-k, echo = FALSE, warning = FALSE, fig.height = 10, fig.width = 12, fig.cap = "Clustering of the customer data for # clusters ranging from 1 to 9."}
-library(broom)
-set.seed(3)
-kclusts <- tibble(k = 1:9) %>%
-  mutate(
-    kclust = map(k, ~kmeans(marketing_data[-3], .x)),
-    tidied = map(kclust, tidy),
-    glanced = map(kclust, glance),
-    augmented = map(kclust, augment, marketing_data[-3])
-  )
-
-clusters <- kclusts %>%
-  unnest(tidied)
-
-assignments <- kclusts %>% 
-  unnest(augmented)
-
-clusterings <- kclusts %>%
-  unnest(glanced, .drop = TRUE)
-
-assignments$k <- factor(assignments$k)
-levels(assignments$k) <- c("1 Cluster", "2 Clusters", "3 Clusters", "4 Clusters", "5 Clusters", "6 Clusters", "7 Clusters", "8 Clusters", "9 Clusters") 
-
-clusters$k <- factor(clusters$k)
-levels(clusters$k) <- c("1 Cluster", "2 Clusters", "3 Clusters", "4 Clusters", "5 Clusters", "6 Clusters", "7 Clusters", "8 Clusters", "9 Clusters") 
-
-
-p1 <- ggplot(assignments, aes(csat, loyalty)) +
-  geom_point(aes(color = .cluster, size = 3)) + 
-  facet_wrap(~ k) +
-  labs(x = 'Customer satisfaction', y = 'Loyalty', colour = 'Cluster') +
-  theme(text = element_text(size=20), legend.position = "none") +
-  geom_point(data = clusters %>% mutate(csat = x2, loyalty = x1), aes(fill = cluster), colour = "black", size = 5, shape = 21, stroke = 2)
-
-p1
-```
-
-If we set K less than 3, then the clustering merges separate groups of data; this causes a large causing a large
-total WSSD, since the cluster center (denoted by an "x") is not close to any of the data in the cluster. On 
-the other hand, if we set K greater than 3, the clustering subdivides subgroups of data; this does indeed still 
-decrease the total WSSD, but by only a *diminishing amount*. If we plot the total WSSD versus the number of 
-clusters, we see that the decrease in total WSSD levels off (or forms an "elbow shape") when we reach roughly 
-the right number of clusters.
-<center>
-```{r 10-toy-kmeans-elbow, echo = FALSE, warning = FALSE, fig.height = 6, fig.width = 10, fig.cap = "Total WSSD for # clusters ranging from 1 to 9."}
-p2 <- ggplot(clusterings, aes(x = k, y = tot.withinss)) +
-        geom_point(size = 2) +
-        geom_line() +
-        annotate("text", x = 3.5, y = 50, label="Elbow", size=10, colour = "blue") +
-        labs(x = "# Clusters", y = "Total WSSD") +
-        theme(text = element_text(size=20)) + 
-        scale_x_continuous(breaks = 1:9)
-p2
-```
-</center>
-
-## K-means in R
-
-To peform K-means clustering in R, we use the `kmeans` function. It takes at
-least two arguments, the data frame containing the data you wish to cluster,
-and K, the number of clusters (here we choose K = 3). Note that since the K-means
-algorithm uses a random initialization of assignments, we need to set the random
-seed to make the clustering reproducible.
-
-```{r 10-kmeans}
-set.seed(1234)
-marketing_clust <- kmeans(marketing_data, centers = 3)
-marketing_clust
-```
-
-As you can see above, the clustering object returned has a lot of information
-about our analysis that we need to explore. Let's take a look at it now. To do
-this, we will call in help from the `broom` package so that we get the model
-output back in a tidy data format. Let's first start by getting the cluster
-identification for each point and plotting that on the scatter plot. To do that
-we use the augment function. Augment takes in the model and the original data
-frame, and returns a data frame with the data and the cluster assignments for
-each point:
-
-```{r 10-plot-clusters-1}
-
-clustered_data <- augment(marketing_clust, marketing_data)
-head(clustered_data)
-```
-
-Now that we have this data frame, we can easily plot the data (i.e., cluster assignments of each point):
-
-```{r 10-plot-clusters-2, fig.height = 4, fig.width = 4.35}
-
-cluster_plot <- ggplot(clustered_data, aes(x = csat, y = loyalty, colour = .cluster), size=2) +
-  geom_point() +
-  labs(x = 'Customer satisfaction', y = 'Loyalty', colour = 'Cluster')
-cluster_plot
-```
-
-As mentioned above, we need to choose a K to perform K-means clustering by finding
-where the "elbow" occurs in the plot of total WSSD versus number of clusters. 
-We can get at the total WSSD (`tot.withinss`) from our
-clustering using `broom`'s `glance` function (it gives model-level statistics).
-For example:
-
-```{r 10-glance}
-glance(marketing_clust)
-```
-
-To calculate the total WSSD for a variety of Ks, we will
-create a data frame with a column named `k` with rows containing the numbers of clusters
-we want to run K-means with (here, 1 to 9). Then we use `map` to apply the `kmeans` function to each
-K. We also use `map` to then apply `glance` to each of the clusterings.
-This results in a complex data frame with
-3 columns, one for K, one for the models, and one for the model statistics
-(output of `glance`, which is a data frame):
-
-```{r 10-choose-k, fig.height = 4, fig.width = 4.35}
-marketing_clust_ks <- tibble(k = 1:9) %>%
-  mutate(marketing_clusts = map(k, ~kmeans(marketing_data, .x)),
-         glanced = map(marketing_clusts, glance)) 
-head(marketing_clust_ks)
-```
-
-We now extract the total WSSD from the `glanced` column. Given that each item in
-this column is a data frame, we will need to use the `unnest` function to
-unpack the data frames. 
-
-```{r 10-get-total-within-sumsqs}
-clustering_statistics <- marketing_clust_ks %>%
-  unnest(glanced)
-
-head(clustering_statistics)
-```
-
-Now that we have `tot.withinss` and `k` as columns in a data frame, we can make a line plot 
-and search for the "elbow" to find which value of K to use. 
-
-
-```{r 10-plot-choose-k, fig.height = 4, fig.width = 4.35}
-elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
-  geom_point() +
-  geom_line() +
-  xlab("K") +
-  ylab("Total within-cluster sum of squares")+
-  scale_x_continuous(breaks = 1:9)
-elbow_plot
-```
-
-It looks like 3 clusters is the right choice for this data.
-But why is there a "bump" in the total WSSD plot here? Shouldn't total WSSD always
-decrease as we add more clusters? Technically yes, but remember:  K-means can 
-get "stuck" in a bad solution. Unfortunately, for K = 6 we had an unlucky initialization
-and found a bad clustering! We can help prevent finding a bad clustering by trying a 
-few different random initializations via the `nstart` argument (here we use 10 restarts). 
-```{r 10-choose-k-nstart, fig.height = 4, fig.width = 4.35}
-marketing_clust_ks <- tibble(k = 1:9) %>%
-  mutate(marketing_clusts = map(k, ~kmeans(marketing_data, nstart = 10, .x)),
-         glanced = map(marketing_clusts, glance)) 
-
-clustering_statistics <- marketing_clust_ks %>%
-  unnest(glanced)
-
-elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
-  geom_point() +
-  geom_line() +
-  xlab("K") +
-  ylab("Total within-cluster sum of squares")+
-  scale_x_continuous(breaks = 1:9)
-elbow_plot
+```{r 10-example-means2, echo = TRUE, message = FALSE, warning = FALSE}
+population_distribution <-  ggplot(airbnb, aes(x = price)) +
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price ($)") +
+    ggtitle("Population distribution of price") 
+population_distribution
+population_parameters <- airbnb %>% 
+    summarize(pop_mean = mean(price),
+             pop_sd = sd(price))
+population_parameters
 ```
 
 
+
+```{r 10-example-means3, echo = TRUE, message = FALSE, warning = FALSE}
+sample_1 <- airbnb %>% 
+    rep_sample_n(20)
+head(sample_1)
+sample_distribution <- ggplot(sample_1, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price ($)") +
+    ggtitle("Distribution of sample")
+sample_distribution
+```
+
+```{r 10-example-means4, echo = TRUE, message = FALSE, warning = FALSE}
+samples <- rep_sample_n(airbnb, size = 20, reps = 1500)
+
+sample_estimates <- samples %>% 
+    group_by(replicate) %>% 
+    summarise(sample_mean = mean(price))
+
+sampling_distribution_20 <-  ggplot(sample_estimates, aes(x = sample_mean)) +
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Sample mean price ($)") +
+    ggtitle("Sampling distribution of the sample means") 
+
+grid.arrange(population_distribution, sample_distribution, sampling_distribution_20, nrow = 3)
+```
+
+
+```{r 10-example-means5, echo = TRUE, message = FALSE, warning = FALSE}
+sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 1500) %>% 
+    group_by(replicate) %>% 
+    summarise(sample_mean = mean(price))
+
+sampling_distribution_50 <-  ggplot(sample_estimates_50, aes(x = sample_mean)) +
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Sample mean price ($)") +
+    ggtitle("n = 50")
+sampling_distribution_50
+
+sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 1500) %>% 
+    group_by(replicate) %>% 
+    summarise(sample_mean = mean(price))
+
+sampling_distribution_100 <-  ggplot(sample_estimates_100, aes(x = sample_mean)) +
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Sample mean price ($)") +
+    ggtitle("n = 100")
+sampling_distribution_100
+
+grid.arrange(population_distribution + geom_vline(xintercept = mean(airbnb$price), col = "red"), sampling_distribution_20 + geom_vline(xintercept = mean(airbnb$price), col = "red"),
+sampling_distribution_50 + geom_vline(xintercept = mean(airbnb$price), col = "red"), 
+sampling_distribution_100 + geom_vline(xintercept = mean(airbnb$price), col = "red"), nrow = 2, ncol = 2)
+```
+## Summary/Conclusion
 
 ## Additional readings:
 
